// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomeInfo - aWalletYouControl renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "paddingLeft": 32,
        "paddingRight": 32,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#FFFCFA",
          "fontFamily": "Baloo2-Bold",
          "fontSize": 24,
          "letterSpacing": 0.24,
          "lineHeight": 32,
          "textAlign": "center",
        },
        false,
      ]
    }
  >
    a wallet YOU control
  </Text>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#FFFCFA",
          "marginTop": 16,
          "textAlign": "center",
        },
        false,
      ]
    }
  >
    Peach has a built-in wallet, so you can get started right away. No third-party apps required to use Bitcoin properly!
  </Text>
  <Image
    resizeMode="contain"
    source={
      {
        "testUri": "../../../src/assets/onboarding/a-wallet-you-control.png",
      }
    }
    style={
      {
        "height": 525,
        "width": 750,
      }
    }
  />
</View>
`;

exports[`WelcomeInfo - peachOfMind renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "paddingLeft": 32,
        "paddingRight": 32,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#FFFCFA",
          "fontFamily": "Baloo2-Bold",
          "fontSize": 24,
          "letterSpacing": 0.24,
          "lineHeight": 32,
          "textAlign": "center",
        },
        false,
      ]
    }
  >
    Peach of mind
  </Text>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#FFFCFA",
          "marginTop": 16,
          "textAlign": "center",
        },
        false,
      ]
    }
  >
    We'll guarantee you get your part of the deal thanks to our advanced escrow and in-app support.
  </Text>
  <Image
    resizeMode="contain"
    source={
      {
        "testUri": "../../../src/assets/onboarding/peach-of-mind.png",
      }
    }
    style={
      {
        "height": 525,
        "width": 750,
      }
    }
  />
</View>
`;

exports[`WelcomeInfo - peerToPeer renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "paddingLeft": 32,
        "paddingRight": 32,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#FFFCFA",
          "fontFamily": "Baloo2-Bold",
          "fontSize": 24,
          "letterSpacing": 0.24,
          "lineHeight": 32,
          "textAlign": "center",
        },
        false,
      ]
    }
  >
    peer-to-peer
  </Text>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#FFFCFA",
          "marginTop": 16,
          "textAlign": "center",
        },
        false,
      ]
    }
  >
    With Peach, you don't buy from us, but from other people. It's a marketplace for bitcoin!
  </Text>
  <Image
    resizeMode="contain"
    source={
      {
        "testUri": "../../../src/assets/onboarding/peer-to-peer.png",
      }
    }
    style={
      {
        "height": 525,
        "width": 750,
      }
    }
  />
</View>
`;

exports[`WelcomeInfo - privacyFirst renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "paddingLeft": 32,
        "paddingRight": 32,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#FFFCFA",
          "fontFamily": "Baloo2-Bold",
          "fontSize": 24,
          "letterSpacing": 0.24,
          "lineHeight": 32,
          "textAlign": "center",
        },
        false,
      ]
    }
  >
    privacy first
  </Text>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#FFFCFA",
          "marginTop": 16,
          "textAlign": "center",
        },
        false,
      ]
    }
  >
    Your data is stored on your phone and is fully encrypted... We don't even want to know who you are.
  </Text>
  <Image
    resizeMode="contain"
    source={
      {
        "testUri": "../../../src/assets/onboarding/privacy-first.png",
      }
    }
    style={
      {
        "height": 525,
        "width": 750,
      }
    }
  />
</View>
`;
